# ding-tui

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  justfile
ding-cli/: Cargo.toml  crate.nix
ding-cli/src/: main.rs
ding-rs/: Cargo.toml  crate.nix
ding-rs/src/: client.rs  errors.rs  lib.rs  types.rs
