[package]
authors = ["renesat <self@renesat.me>"]
edition = "2021"
name = "ding-rs"
description = "TODO"
version = "0.1.0"

[dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"]}
serde = { version = "1.0.210", features = ["derive", "rc"] }
thiserror = "1.0.63"
url = { version = "2", features = ["serde"] }
